add turn signal, bluetooh, wifi, gear indicators

--- a/esp32/odo_panel/main/CMakeLists.txt
+++ b/esp32/odo_panel/main/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "main.cpp" "energy_meter.cpp" "speed_meter.cpp" "ui_lvgl.cpp"
+idf_component_register(SRCS "gear_indicator.cpp" "main.cpp" "energy_meter.cpp" "speed_meter.cpp" "turn_signal.cpp" "ui_lvgl.cpp" "bluetooth_icon.cpp" "wifi_icon.cpp"
                        INCLUDE_DIRS "."
                        REQUIRES "esp_lcd")
